[build-system]
requires = ["hatchling>=1.16.0"]
build-backend = "hatchling.build"

[project]
name = "grinder"
version = "0.1.0"
description = "Grinder Ultimate: fully automatic Rust-to-Python PyO3 bindings"
requires-python = ">=3.9"
dependencies = ["typer", "rich"]

[project.scripts]
grinder = "grinder.cli:app"
